[package]
name = "eldenring-alt-saves"
version = "1.3.2"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
log = "0.4.1"
serde = { version = "1.0.160", features = ["derive"]}
toml = "0.7.2"
broadsword = { git = "https://github.com/vswarte/broadsword.git" }
detour = { git = "https://github.com/veeenu/detour-rs.git", branch = "master" }

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"
