[package]
name = "eldenring-alt-saves"
version = "1.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "z"

[dependencies]
log = "0.4.1"
serde = { version = "1.0.160", features = ["derive"]}
toml = "0.7.2"
broadsword = { git = "https://github.com/vswarte/broadsword.git" }
region = "3.0.2"

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
]

[dependencies.retour]
version = "0.3"
features = [
    "static-detour",
]

[patch.crates-io]
libudis86-sys = { git = 'https://github.com/vars1ty/libudis86-sys.git' }
